# openGlProject

./: .gitignore  CMakeLists.txt  main.cpp
Blends/: axis test.blend  blue bear jelly.blend  bonustime.blend  bonustime.mtl  boy.mtl  coin gold.blend  coin gold.mtl  coin.blend  coin.mtl  gingerbrave diffuse.psd  gingerbrave.blend  gingerbrave.mtl  healthbar diffuse.psd  healthbar.blend  healthbar.mtl  jelly bear blue.blend  jelly bear blue.mtl  jelly bear pink.blend  jelly bear pink.mtl  jelly bear yellow.blend  jelly bear yellow.mtl  jelly.blend  jelly.mtl  jellybean red.blend  jellybean red.mtl  jellybean.blend  jellybean.mtl  pet choco drop.blend  phone diffuse.psd  phone.blend  phone.mtl  pink bear jelly.blend  scene.mtl  triangle seam test.blend  triangle test.blend  wood table.blend  wood table.mtl  yellow bear jelly.blend
Blends/refs/: refs.md  refs.txt
Libs/: GameObject.cpp  GameObject.h  GameObjectCreator.cpp  GameObjectCreator.h  Mesh.cpp  Shader.cpp  Window.cpp
Shaders/: bgShader.frag  bgShader.vert  depthShader.vert  lightShader.frag  shader.frag  shader.vert
